unpackaged/main/default/objects/Account_Manager_Role_Assignment__mdt/Account_Manager_Role_Assignment__mdt.object-meta.xml
<CustomObject>
    <description>Used to populate AM user Role based on its Manager&#39;s Role and the Role Hierarchy assignment</description>
    <label>Account Manager’s Role Assignment</label>
    <pluralLabel>Account Manager’s Role Assignments</pluralLabel>
</CustomObject>