unpackaged/main/default/objects/Account_Manager_Role_Assignment__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>