unpackaged/main/default/objects/Account_Manager_Role_Assignment__mdt/fields/Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Manager_Role__c</fullName>
    <description>Role of ASM</description>
    <label>Manager&#39;s Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>