unpackaged/main/default/objects/Account_Manager_Role_Assignment__mdt/fields/Subordinate_Role__c.field-meta.xml
<CustomField>
    <fullName>Subordinate_Role__c</fullName>
    <description>Role of AM</description>
    <label>Subordinate&#39;s Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>