unpackaged/main/default/objects/Account_Manager_Role_Assignment__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Manager_Role__c</columns>
    <columns>Subordinate_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>